--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
     "bootstrap": "^5.1.3",
+    "luxon": "^2.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-icons": "^1.6.1",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/luxon": "^2.0.7"
   }
 }
