--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "victory": "^36.2.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
