--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
+    "sass": "^1.45.0",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.4",
-    "victory": "^36.2.0"
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
