--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
+    "bible-passage-reference-parser": "^2.0.1",
     "bootstrap": "^5.1.3",
     "luxon": "^2.1.1",
     "react": "^17.0.2",
