--- a/package.json
+++ b/package.json
@@ -1,56 +1,8 @@
 {
-  "name": "ds-wireframes",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.34",
-    "@types/react-calendar": "^3.4.3",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.15",
-    "bible-passage-reference-parser": "^2.0.1",
-    "bootstrap": "^5.1.3",
-    "luxon": "^2.1.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
-    "react-bootstrap-icons": "^1.6.1",
-    "react-calendar": "^3.5.0",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "recharts": "^2.1.6",
-    "sass": "^1.45.0",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.4.4"
-  },
-  "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/luxon": "^2.0.7"
-  }
+  "name": "monorepo",
+  "scripts": {},
+  "workspaces": [
+    "./packages/*",
+    "./apps/*"
+  ]
 }
