--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "extends": "../../tsconfig",
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "compilerOptions": {
-    "noEmit": true
+    "noEmit": false
   }
 }
