--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -3,29 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.34",
-    "@types/react-calendar": "^3.4.3",
+    "@devouringscripture/common": "^1.0.0",
+    "@devouringscripture/refparse": "^1.0.0",
+    "@reduxjs/toolkit": "^1.7.1",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "@types/react-calendar": "^3.4.4",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.15",
-    "bible-passage-reference-parser": "^2.0.1",
+    "@types/styled-components": "^5.1.19",
     "bootstrap": "^5.1.3",
-    "luxon": "^2.1.1",
+    "luxon": "^2.2.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
-    "react-bootstrap-icons": "^1.6.1",
+    "react-bootstrap": "^2.0.4",
+    "react-bootstrap-icons": "^1.7.2",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "recharts": "^2.1.6",
-    "sass": "^1.45.0",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "recharts": "^2.1.8",
+    "sass": "^1.45.1",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.4",
-    "@devouringscripture/common": "^1.0.0"
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -52,6 +52,6 @@
     ]
   },
   "devDependencies": {
-    "@types/luxon": "^2.0.7"
+    "@types/luxon": "^2.0.8"
   }
 }
