--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -13,15 +14,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
-    "paths": {
-      "ds-ui/*": ["./apps/ds-ui/src/*"],
-      "ds-ui": ["./apps/ds-ui/src"],
-      "ds-wf-be/*": ["./apps/ds-wf-be/src/*"],
-      "ds-wf-be": ["./apps/ds-wf-be/src"],
-      "@devouringscripture/common/*": ["./packages/common/src/*"],
-      "@devouringscripture/common": ["./packages/common/src"]
-    }
+    "jsx": "react-jsx"
   },
   "include": ["src"]
 }
