--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "extends": "../../tsconfig",
   "include": ["src/**/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
-    "noEmit": true,
-    "sourceMap": true
+    "noEmit": false,
+    "sourceMap": true,
+    "declaration": true,
+    "outDir": "./build"
   }
 }
