--- a/packages/refparse/package.json
+++ b/packages/refparse/package.json
@@ -5,12 +5,20 @@
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "watch": "tsc --build --watch"
+    "watch": "tsc --build --watch",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "keywords": [
     "typescript"
