refactored tests into separate files and fixed Jest compile errors

--- a/packages/refparse/package.json
+++ b/packages/refparse/package.json
@@ -18,7 +18,13 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "transform": {
+      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!variables/.*)"
+    ]
   },
   "keywords": [
     "typescript"
