--- a/packages/refparse/tsconfig.json
+++ b/packages/refparse/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig",
   "include": ["src/**/*"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "**/__test__/*.test.ts", "build"],
   "compilerOptions": {
     "noEmit": false,
     "sourceMap": true,
