--- a/apps/ds-api/package.json
+++ b/apps/ds-api/package.json
@@ -9,24 +9,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@devouringscripture/common": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.13.0",
+    "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "helmet": "^4.6.0",
-    "luxon": "^2.1.1",
+    "luxon": "^2.2.0",
     "node-json-db": "^1.4.1",
-    "uuid": "^8.3.2",
-    "@devouringscripture/common": "^1.0.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/luxon": "^2.0.7",
-    "@types/node": "^16.11.10",
+    "@types/luxon": "^2.0.8",
+    "@types/node": "^17.0.5",
     "@types/uuid": "^8.3.3",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   }
 }
