--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.19",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "luxon": "^2.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
@@ -25,7 +26,8 @@
     "recharts": "^2.1.8",
     "sass": "^1.45.1",
     "styled-components": "^5.3.3",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/luxon": "^2.0.8"
+    "@types/luxon": "^2.0.8",
+    "@types/yup": "^0.29.13"
   }
 }
