--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,6 +6,8 @@
       "ds-ui": ["./apps/ds-ui/src"],
       "ds-api/*": ["./apps/ds-api/src/*"],
       "ds-api": ["./apps/ds-api/src"],
+      "ds-vapi/*": ["./apps/ds-vapi/src/*"],
+      "ds-vapi": ["./apps/ds-vapi/src"],
       "@devouringscripture/common/*": ["./packages/common/src/*"],
       "@devouringscripture/common": ["./packages/common/src"],
       "@devouringscripture/refparse/*": ["./packages/refparse/src/*"],
