--- a/apps/ds-vapi/package.json
+++ b/apps/ds-vapi/package.json
@@ -9,17 +9,21 @@
   "author": "sernaferna",
   "license": "ISC",
   "dependencies": {
+    "@devouringscripture/common": "^1.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
-    "helmet": "^4.6.0"
+    "helmet": "^4.6.0",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.5",
-    "typescript": "^4.5.4",
-    "ts-node-dev": "^1.1.8"
+    "@types/sqlite3": "^3.1.8",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   }
 }
