created a 'start all' root script and updated README appropriately

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "monorepo",
-  "scripts": {},
+  "scripts": {
+    "start": "npm start -w ds-api & npm start -w ds-vapi & npm start -w ds-ui"
+  },
   "workspaces": [
     "./packages/*",
     "./apps/*"
