--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.19",
+    "@uiw/react-md-editor": "^3.9.1",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "luxon": "^2.2.0",
