--- a/apps/ds-vapi/package.json
+++ b/apps/ds-vapi/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "@devouringscripture/common": "^1.0.0",
+    "@devouringscripture/refparse": "^1.0.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "helmet": "^4.6.0",
-    "sqlite3": "^5.0.2"
+    "luxon": "^2.3.0",
+    "node-json-db": "^1.4.1",
+    "sqlite3": "^5.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
