--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,12 +5,26 @@
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.4"
   },
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "watch": "tsc --build --watch"
+    "watch": "tsc --build --watch",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "transform": {
+      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!variables/.*)"
+    ]
   },
   "keywords": [
     "typescript"
@@ -19,6 +33,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "express-validator": "^6.14.0"
+    "express-validator": "^6.14.0",
+    "semver": "^7.3.5"
   }
 }
