added simpler command for building dependencies

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "monorepo",
   "scripts": {
     "start": "npm start -w ds-api & npm start -w ds-vapi & npm start -w ds-ui",
+    "build": "npm run build -w @devouringscripture/common & npm run build -w @devouringscripture/refparse",
     "test": "npm run test -w @devouringscripture/common & npm run test -w @devouringscripture/refparse"
   },
   "workspaces": [
