implemented tree shaking

--- a/apps/ds-ui/tsconfig.json
+++ b/apps/ds-ui/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "../../tsconfig",
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "compilerOptions": {
-    "noEmit": true
+    "noEmit": true,
+    "target": "ESNext",
+    "sourceMap": true
   }
 }
