--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -14,6 +14,7 @@
     "@uiw/react-md-editor": "^3.9.1",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "lodash-es": "^4.17.21",
     "luxon": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@types/luxon": "^2.0.8",
     "@types/yup": "^0.29.13"
   }
