--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -4,28 +4,21 @@
   "private": true,
   "dependencies": {
     "@devouringscripture/common": "^1.0.0",
-    "@reduxjs/toolkit": "^1.7.1",
-    "@types/node": "^17.0.5",
-    "@types/react": "^17.0.38",
-    "@types/react-calendar": "^3.4.4",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.19",
+    "@reduxjs/toolkit": "^1.8.2",
     "@uiw/react-md-editor": "^3.9.1",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "lodash-es": "^4.17.21",
-    "luxon": "^2.3.1",
+    "luxon": "^2.4.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.4",
-    "react-bootstrap-icons": "^1.7.2",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.2",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
-    "recharts": "^2.1.8",
-    "sass": "^1.45.1",
+    "recharts": "^2.1.10",
+    "sass": "^1.52.1",
     "typescript": "^4.5.4",
     "yup": "^0.32.11"
   },
@@ -55,7 +48,13 @@
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
-    "@types/luxon": "^2.0.8",
-    "@types/yup": "^0.29.13"
+    "@types/luxon": "^2.3.2",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "@types/react-calendar": "^3.5.0",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/yup": "^0.29.14",
+    "react-scripts": "^5.0.1"
   }
 }
