--- a/apps/ds-vapi/package.json
+++ b/apps/ds-vapi/package.json
@@ -12,18 +12,19 @@
     "@devouringscripture/common": "^1.0.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "express-validator": "^6.14.0",
-    "helmet": "^4.6.0",
-    "luxon": "^2.3.1",
-    "node-json-db": "^1.4.1",
-    "sqlite3": "^5.0.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.1",
+    "helmet": "^5.1.0",
+    "luxon": "^2.4.0",
+    "node-json-db": "^1.5.0",
+    "sqlite3": "^5.0.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/luxon": "^2.3.2",
     "@types/node": "^17.0.5",
     "@types/sqlite3": "^3.1.8",
     "ts-node-dev": "^1.1.8",
