--- a/.github/workflows/version-bump-ui.yml
+++ b/.github/workflows/version-bump-ui.yml
@@ -21,3 +21,4 @@ jobs:
           uses: 'phips28/gh-action-bump-version@master'
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            PACKAGEJSON_DIR: 'apps/ds-ui'
