--- a/.github/workflows/version-bump-ui.yml
+++ b/.github/workflows/version-bump-ui.yml
@@ -9,15 +9,15 @@ on:
       - 'apps/ds-ui/**'
 
 jobs:
-  bump_ui:
+  bump_version:
     name: 'Bump version Number for UI app'
-    if_merged:
-      if: github.event.pull_request.merged == true
-      runs-on: ubuntu-latest
-      steps:
-        - name: 'Checkout source code'
-          uses: 'actions/checkout@v2'
-        - name: 'Bump version for UI'
-          uses: 'phips28/gh-action-bump-version@master'
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout source code'
+        uses: 'actions/checkout@v2'
+      - name: 'Bump version for UI'
+        uses: 'phips28/gh-action-bump-version@master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PACKAGEJSON_DIR: 'apps/ds-ui'
