running on push instead fo pr merge

--- a/.github/workflows/version-bump-ui.yml
+++ b/.github/workflows/version-bump-ui.yml
@@ -1,10 +1,8 @@
 name: 'Bump Version'
 
 on:
-  pull_request:
+  push:
     branches: [main]
-    types:
-      - closed
     paths:
       - 'apps/ds-ui/**'
 
