--- a/.github/workflows/version-bump-ui.yml
+++ b/.github/workflows/version-bump-ui.yml
@@ -1,15 +1,18 @@
 name: 'Bump Version'
 
 on:
-  push:
+  pull_request:
     branches:
       - 'main'
+    types:
+      - closed
     paths:
       - 'apps/ds-ui/**'
 
 jobs:
   bump_version:
     name: 'Bump version Number for UI app'
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout source code'
