--- a/.github/workflows/version-bump-ui.yml
+++ b/.github/workflows/version-bump-ui.yml
@@ -20,8 +20,8 @@ jobs:
         id: ui-bump
         uses: 'phips28/gh-action-bump-version@master'
         with:
-          tag-prefix: 'v'
           target-branch: 'main'
+          skip-tag: 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PACKAGEJSON_DIR: 'apps/ds-ui'
