--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   bump_versions:
-    name: 'Bump version numbers apps'
+    name: 'Bump app version numbers'
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout source code'
