--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "recharts": "^2.1.10",
+    "remark-supersub": "^1.0.0",
     "sass": "^1.52.1",
     "typescript": "^4.5.4",
     "yup": "^0.32.11"
