attempting to use new MD library

--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@devouringscripture/common": "^1.0.0",
+    "@devouringscripture/remark-tac": "^1.0.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@uiw/react-md-editor": "^3.9.1",
     "bootstrap": "^5.1.3",
