--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -8,7 +8,7 @@
     "@types/jest": "^27.4.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.4"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "build": "tsc --build",
@@ -32,10 +32,10 @@
   "author": "sernaferna",
   "license": "ISC",
   "dependencies": {
+    "bible-passage-reference-parser": "^2.0.1",
+    "bible-reference-formatter": "^1.0.1",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
-    "semver": "^7.3.5",
-    "bible-passage-reference-parser": "^2.0.1",
-    "bible-reference-formatter": "^1.0.1"
+    "semver": "^7.3.5"
   }
 }
