--- a/packages/remark-plugins/package.json
+++ b/packages/remark-plugins/package.json
@@ -5,12 +5,12 @@
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "dependencies": {
+    "@devouringscripture/common": "^1.0.0",
     "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.0",
-    "@devouringscripture/common": "^1.0.0"
+    "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.5.4"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "build": "tsc --build",
