--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -20,7 +20,9 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "transform": {
-      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest",
+      "^.+\\.(ts|tsx)?$": "ts-jest",
+      "^.+\\.(js|jsx)$": "babel-jest"
     },
     "transformIgnorePatterns": [
       "node_modules/(?!variables/.*)"
