--- a/packages/remark-plugins/package.json
+++ b/packages/remark-plugins/package.json
@@ -14,6 +14,7 @@
     "retext": "^8.1.0",
     "retext-smartypants": "^5.1.0",
     "unified": "^10.1.2",
+    "unist-util-is": "^5.1.1",
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
