--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "recharts": "^2.1.10",
+    "redux-persist": "^6.0.0",
+    "redux-persist-indexeddb-storage": "^1.0.4",
     "remark-supersub": "^1.0.0",
     "sass": "^1.52.1",
     "typescript": "^4.7.4",
