--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -12,6 +12,7 @@
     "js-file-download": "^0.4.12",
     "lodash-es": "^4.17.21",
     "luxon": "^2.4.0",
+    "marked": "^4.0.18",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.2",
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/luxon": "^2.3.2",
+    "@types/marked": "^4.0.3",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-calendar": "^3.5.0",
