--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -18,6 +18,7 @@
     "react-dnd": "^15.1.2",
     "react-dnd-html5-backend": "^15.1.3",
     "react-dom": "^17.0.2",
+    "react-hotkeys": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "recharts": "^2.1.10",
