MINOR added ability to parse 'frontmatter' out of MD

--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -6,7 +6,9 @@
     "@devouringscripture/common": "^1.0.0",
     "@reduxjs/toolkit": "^1.8.2",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "formik": "^2.2.9",
+    "front-matter": "^4.0.2",
     "js-file-download": "^0.4.12",
     "lodash-es": "^4.17.21",
     "luxon": "^2.4.0",
