--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/luxon": "^2.3.2",
+    "@types/marked": "^4.0.5",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-calendar": "^3.5.0",
