--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -9,7 +9,9 @@
       "ds-vapi/*": ["./apps/ds-vapi/src/*"],
       "ds-vapi": ["./apps/ds-vapi/src"],
       "@devouringscripture/common/*": ["./packages/common/src/*"],
-      "@devouringscripture/common": ["./packages/common/src"]
+      "@devouringscripture/common": ["./packages/common/src"],
+      "@devouringscripture/mde/*": ["./packages/mde/src/*"],
+      "@devouringscripture/mde": ["./packages/mde/src"]
     }
   }
 }
