--- a/apps/ds-ui/package.json
+++ b/apps/ds-ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@devouringscripture/common": "^1.0.0",
+    "@devouringscripture/mde": "*",
     "@reduxjs/toolkit": "^1.8.2",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
@@ -12,7 +13,6 @@
     "js-file-download": "^0.4.12",
     "lodash-es": "^4.17.21",
     "luxon": "^2.4.0",
-    "marked": "^4.0.18",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.2",
@@ -20,7 +20,6 @@
     "react-dnd": "^15.1.2",
     "react-dnd-html5-backend": "^15.1.3",
     "react-dom": "^17.0.2",
-    "react-hotkeys": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "recharts": "^2.1.10",
@@ -31,7 +30,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -57,7 +56,6 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/luxon": "^2.3.2",
-    "@types/marked": "^4.0.5",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-calendar": "^3.5.0",
