MINOR moved fs out of ds-ui and into modal in mde

--- a/packages/mde/package.json
+++ b/packages/mde/package.json
@@ -68,5 +68,11 @@
     "@types/react-dom": {
       "optional": true
     }
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
