--- a/packages/mde/tsconfig.json
+++ b/packages/mde/tsconfig.json
@@ -3,12 +3,7 @@
   "compilerOptions": {
     "outDir": "lib/esm",
     "jsx": "react",
-    "declaration": true,
-    "noUnusedLocals": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
+    "declaration": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "lib"]
