--- a/packages/mde/package.json
+++ b/packages/mde/package.json
@@ -37,29 +37,29 @@
   "dependencies": {
     "@devouringscripture/common": "*",
     "js-file-download": "^0.4.12",
-    "marked": "^4.0.18",
-    "react-bootstrap-icons": "^1.8.2",
+    "marked": "^4.2.3",
     "react-hotkeys": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
-    "@types/marked": "^4.0.5",
-    "@types/node": "^17.0.5",
+    "typescript": "^4.9.3",
+    "@types/marked": "^4.0.7",
+    "@types/node": "^18.11.10",
     "react-scripts": "^5.0.1",
-    "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@types/react-dom": "^17.0.11",
-    "@types/react": "^17.0.38",
-    "react-bootstrap": "^2.4.0"
+    "bootstrap": "^5.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.26",
+    "react-bootstrap": "^2.6.0"
   },
   "peerDependencies": {
-    "bootstrap": ">=5.1.3",
-    "react": ">=17.0.2",
-    "react-dom": ">=17.0.2",
-    "@types/react-dom": "17.0.11",
-    "@types/react": ">=17.0.38",
-    "react-bootstrap": ">=2.4.0"
+    "bootstrap": ">=5.2.3",
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0",
+    "@types/react-dom": "18.0.9",
+    "@types/react": ">=18.0.26",
+    "react-bootstrap": ">=2.6.0",
+    "react-bootstrap-icons": ">=1.10.2"
   },
   "peerDependenciesMeta": {
     "@types/react": {
